{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 296,
  "lineage": "d32bd0f3-d2fd-dc6b-59a6-773fbe5f5f3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b5b3a93ed654d19",
            "arn": "arn:aws:ec2:us-east-1:119702312084:instance/i-082157e05d161dea4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082157e05d161dea4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "phani-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096a2637c8a79e058",
            "private_dns": "ip-10-0-1-192.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.192",
            "public_dns": "ec2-34-207-60-78.compute-1.amazonaws.com",
            "public_ip": "34.207.60.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00072a3d969808a77",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0575f93a89dde7837",
            "tags": {
              "Name": "devserver"
            },
            "tags_all": {
              "Name": "devserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0664960d7b5eb4a73"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:internet-gateway/igw-02285a447cdd0bd4b",
            "id": "igw-02285a447cdd0bd4b",
            "owner_id": "119702312084",
            "tags": {
              "Name": "igw-terraform"
            },
            "tags_all": {
              "Name": "igw-terraform"
            },
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:route-table/rtb-0d55e5a4fb60fd130",
            "id": "rtb-0d55e5a4fb60fd130",
            "owner_id": "119702312084",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt-terraform"
            },
            "tags_all": {
              "Name": "private-rt-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:route-table/rtb-0638c7973853b80f9",
            "id": "rtb-0638c7973853b80f9",
            "owner_id": "119702312084",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02285a447cdd0bd4b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt-terraform"
            },
            "tags_all": {
              "Name": "pub-rt-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-terraform",
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f780c662e7e8585",
            "route_table_id": "rtb-0638c7973853b80f9",
            "subnet_id": "subnet-0575f93a89dde7837"
          },
          "dependencies": [
            "aws_internet_gateway.igw-terraform",
            "aws_route_table.pub-rt-terraform",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b82fe6baefed1e73",
            "route_table_id": "rtb-0638c7973853b80f9",
            "subnet_id": "subnet-04b8daf944c992989"
          },
          "dependencies": [
            "aws_internet_gateway.igw-terraform",
            "aws_route_table.pub-rt-terraform",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced32ca9a44c9000",
            "route_table_id": "rtb-0638c7973853b80f9",
            "subnet_id": "subnet-0d192a6edf8c7adad"
          },
          "dependencies": [
            "aws_internet_gateway.igw-terraform",
            "aws_route_table.pub-rt-terraform",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:security-group/sg-0664960d7b5eb4a73",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0664960d7b5eb4a73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "119702312084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:subnet/subnet-09bbb9d5abe22a8a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bbb9d5abe22a8a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119702312084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1-private"
            },
            "tags_all": {
              "Name": "subnet-1-private"
            },
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:subnet/subnet-03f6d9097e91c8d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f6d9097e91c8d4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119702312084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2-private"
            },
            "tags_all": {
              "Name": "subnet-2-private"
            },
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:subnet/subnet-0df1a0288b64d4a43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df1a0288b64d4a43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119702312084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-3-private"
            },
            "tags_all": {
              "Name": "subnet-3-private"
            },
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:subnet/subnet-0575f93a89dde7837",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0575f93a89dde7837",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119702312084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1-public"
            },
            "tags_all": {
              "Name": "subnet-1-public"
            },
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:subnet/subnet-04b8daf944c992989",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b8daf944c992989",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119702312084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2-public"
            },
            "tags_all": {
              "Name": "subnet-2-public"
            },
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:subnet/subnet-0d192a6edf8c7adad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d192a6edf8c7adad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119702312084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-3-public"
            },
            "tags_all": {
              "Name": "subnet-3-public"
            },
            "vpc_id": "vpc-0dbce42acadcfdc87"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119702312084:vpc/vpc-0dbce42acadcfdc87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba68512b0db551a1",
            "default_route_table_id": "rtb-0b2fec9fbd8e6f07b",
            "default_security_group_id": "sg-01c7a1471930425ad",
            "dhcp_options_id": "dopt-03f9729029d1ae38e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbce42acadcfdc87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2fec9fbd8e6f07b",
            "owner_id": "119702312084",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}